# Agile-Robotics-for-Industrial-Automation-Competition-ARIAC-Project

./: LICENSE  README.md  final_spring1_2024.yaml  final_spring2024.yaml  rwa3_spring2024.yaml  rwa4_spring2024.yaml
final_group1/: CMakeLists.txt
final_group1/config/: sensors.yaml  sensors_bonus.yaml
final_group1/doc/: README.md  ariac_group1.sh  ariac_group1_bonus.sh
final_group1/final_group1/: ariac_python_node_interface.py  ariac_python_node_interface_bonus.py  package.xml
final_group1/final_group1/doc/: README.md
final_group1/final_group1/final_group1/: ariac_python_node_interface.py
final_group1/final_group1/include/final_group1/: ariac_cpp_node.hpp  start_ariac_competition.hpp  utils.hpp
final_group1/final_group1/src/: ariac_cpp_node.cpp
final_group1/include/final_group1/: ariac_cpp_node.hpp
final_group1/launch/: final_group1.launch.py  final_group1_bonus.launch.py
final_group1/script/: ariac_bonus_node.py  ariac_python_node.py
final_group1/src/: ariac_cpp_node.cpp  main_cpp_python.cpp  start_ariac_competition.cpp
robot_commander_msgs/: CMakeLists.txt  package.xml
robot_commander_msgs/srv/: PickPartBin.srv  PlacePartTray.srv
rwa3_group1/: CMakeLists.txt  package.xml
rwa3_group1/include/rwa3_group1/: start_ariac_competition.hpp
rwa3_group1/launch/: rwa3_group1.launch.py
rwa3_group1/rwa3_group1/: order_management_interface.py  order_management_interface_update.py
rwa3_group1/script/: order_management.py  order_management_update.py
rwa3_group1/src/: start_ariac_competition.cpp
rwa4_group1/: CMakeLists.txt  package.xml
rwa4_group1/config/: sensors.yaml  sensors1.yaml
rwa4_group1/doc/: README.md
rwa4_group1/launch/: rwa4_group1.launch.py
rwa4_group1/rwa4_group1/: order_management_interface.py  order_management_interface_rwa4.py  test.py
rwa4_group1/script/: order_management.py  order_management_update.py
rwa4_group1/src/: start_ariac_competition.cpp
rwa5_group1/: CMakeLists.txt  package.xml
rwa5_group1/config/: sensors.yaml
rwa5_group1/doc/: README.md
rwa5_group1/include/rwa5_group1/: ariac_cpp_node.hpp  floor_robot_cpp_python.hpp  start_ariac_competition.hpp
rwa5_group1/launch/: rwa5_group1.launch.py
rwa5_group1/rwa5_group1/: ariac_python_node_interface.py  order_management_interface.py  order_management_interface_alc.py
rwa5_group1/script/: ariac_python_node.py  floor_robot_demo.py  order_management.py
rwa5_group1/src/: ariac_cpp_node.cpp  floor_robot_cpp_python.cpp  main_cpp_python.cpp  start_ariac_competition.cpp
